# newttrs

./: LICENSE  newttrs.cabal
src/NewTTRS/: Law.hs  Match.hs  Outcome.hs  Tournament.hs
