cabal-version:       3.0
name:                newttrs
version:             0.1.0.2
synopsis:            Implementation of the New Table Tennis Rating System
description:         The New Table Tennis Rating System is based on Baysian
                     principles and is designed to handle a large changing
                     population of players. This algorithm was developed
                     and published by David J. Marcus which is avaiable
                     at http://www.ratingscentral.com/Doc/NewTTRS.pdf
homepage:            http://github.com/glguy
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2013 Eric Mertens
category:            Math
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/glguy/newttrs.git

library
  exposed-modules:     NewTTRS.Law, NewTTRS.Match, NewTTRS.Outcome, NewTTRS.Tournament
  build-depends:
    array       ^>= 0.5.6,
    base        ^>= 4.19.1,
    containers  ^>= 0.6.8,
    lens        ^>= 5.2.3,
    statistics  ^>= 0.16.2,
    time        ^>= 1.12.2,
  hs-source-dirs:      src
  ghc-options:         -O2
